--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -190,8 +190,8 @@
                         </div>
                     </div>
                     <div class="data-footer">
-                        <a class="btn-flat" href="/#/my/helpdesk/newticket">REPORT ISSUE</a>
-                        <a class="btn-flat" href="/#/my/helpdesk/ticketlist/0">MY ISSUES</a>
+                        <a class="btn-flat" href="/#/my/helpdesk/newticket">NEW TICKET</a>
+                        <a class="btn-flat" href="/#/my/helpdesk/ticketlist/0">MY TICKETS</a>
                     </div>
                 </div>
 
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="data-footer">
-                        <a class="btn-flat" href="/#/my/helpdesk/newticket">REPORT ISSUE</a>
+                        <a class="btn-flat" href="/#/my/helpdesk/newticket">NEW TICKET</a>
                     </div>
                 </div>
 
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="data-footer">
-                        <a href="#/my/expense" class="btn-flat">NEW EXPENSE</a>
+                        <a href="#/my/expense/new" class="btn-flat">NEW EXPENSE</a>
                         <a href="#/my/expense/submitted" class="btn-flat">MY EXPENSES</a>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                     <div class="data-footer">
-                        <a href="#/my/expense" class="btn-flat">NEW EXPENSE</a>
+                        <a href="#/my/expense/new" class="btn-flat">NEW EXPENSE</a>
                     </div>
                 </div>
                 <div class="card white card-bg travel-bg" id="travel-without-records">
