--- a/src/app/modules/approvals/helpdesk/helpdesk.approval.component.html
+++ b/src/app/modules/approvals/helpdesk/helpdesk.approval.component.html
@@ -71,30 +71,22 @@
                                         {{item.type}}<span>-</span>{{item.severity}}
                                     </template>
                                 </basic-cell>
-                                <basic-cell cell='status' headerLabel=''>
+                                <basic-cell cell='' headerLabel=''>
                                     <template let-item='row'>
-                                        <div class="padding-10">
-                                            <div class="row" *ngIf="item.categoryID != 3">
-                                                <div class="custom-input-field input-field col s4 padding-zero">
-                                                    <h6>Duration</h6>
-                                                    <!--<span><input type='number'  [(ngModel)]="item.duration"/></span> -->
-                                                    <select [(ngModel)]="item.duration" materialize="material_select" [materializeSelectOptions]="durationCollection">
-                                                        <option *ngFor="let option of durationCollection" [value]="option.id">{{option.text}}</option>
+                                       
+                                     
+                                     
+                                       <select placeholder="Duration" [(ngModel)]="item.duration" id="Duration_{{item.number}}" name="Duration_{{item.number}}" style="display:block !important" (change)="onDurationChanged($event.target.value)">
+                                                        <option value="30">30</option>
+                                                        <option value="60">60</option>
+                                                        <option value="90">90</option>
+                                                        <option value="120">120</option>
                                                 </select>
-                                                </div>
-                                                <span class="days-indicator">Days</span>
-                                            </div>
-                                            <div class="custom-input-field input-field col s12 padding-zero">
-                                                <h6>Comments</h6>
-                                                <span><input type='text' [(ngModel)]="item.comments" maxlength="900" /></span><span>(Maximum 900 characters)</span>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col s12 right-align padding-zero" *ngIf="item.status == '1'">
-                                                    <button class="btn custom-btn submit" type='button' (click)="approveLeave(item)" title="Approve" value='Approve'>Approve</button>
+
+                                                <input type='text' name="comments" [(ngModel)]="item.comments" maxlength="900" />
+
+                                                 <button class="btn custom-btn submit" type='button' (click)="approveLeave(item)" title="Approve" value='Approve'>Approve</button>
                                                     <button class="btn custom-btn cancel" (click)="rejectLeave(item)" title="Reject" type='button' value="Reject">Reject</button>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </template>
                                 </basic-cell>
 
