--- a/src/app/modules/helpdesk/helpdesk.component.html
+++ b/src/app/modules/helpdesk/helpdesk.component.html
@@ -1,3 +1,30 @@
-<p>
-  helpdesk works!
-</p>
+<div class="breadcrumb-nav">
+  <div class="row margin-zero">
+    <div class="col s12">
+      <h5>Help Desk
+        <a href="/vibranthelp/help-landing-page.html" target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>
+        <span class="right mandatory-message">
+          <span *ngIf="isUs">US<img class="flag-img" src="assets/images/us-flag.png" /></span>
+          <span *ngIf="!isUs">IND<img class="flag-img" src="assets/images/india-flag.png" /></span>
+        </span>
+      </h5>
+    </div>
+  </div>
+</div>
+<div class="tab-container">
+  <div class="row">
+    <div class="col s12 tab-control padding-zero">
+      <div class="col s12 m8 l5 padding-zero">
+        <ul class="tabs app-tabs" style="width: 100%;">
+          <li class="tab col s3"><a [routerLink]="['newticket']" routerLinkActive="router-link-active">REPORT ISSUE</a></li>
+          <li class="tab col s3"><a routerLink="/my/helpdesk/ticketlist/0" routerLinkActive="router-link-active">MY ISSUES</a></li>
+          <li class="tab col s3" *ngIf="isApprover"><a [routerLink]="['newapproval']" routerLinkActive="router-link-active">HELPDESK REQUESTS</a></li>
+          <!--<li class="tab col s3" *ngIf="isApprover"><a >HELPDESK HISTORY</a></li>-->
+        </ul>
+      </div>
+    </div>
+    <div>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
