--- a/src/app/modules/helpdesk/helpdesk.submitted.component.html
+++ b/src/app/modules/helpdesk/helpdesk.submitted.component.html
@@ -1,17 +1,7 @@
-<div class="breadcrumb-nav">
-    <div class="row margin-zero">
-        <div class="col s12">
-            <h5>Help Desk
-                <a class="help-btn" href="/vibranthelp/help-landing-page.html" target="_blank" title="Help">
-                    <i aria-hidden="true" class="right fa fa-question-circle"></i></a>
-            </h5>
-        </div>
-    </div>
-</div>
 <div class="row m-top20 expense-card-container">
     <div class="row">
         <div class="col s12 padding-zero">
-            <a href="/#/my/helpdesk/ticketlist/{{issueListSelectedStatus}}" class="waves-effect waves-light btn back-btn"><i class="fa fa-angle-left left" title="Back to List" aria-hidden="true"></i>Back</a>
+            <a (click)="backClicked()" class="waves-effect waves-light btn back-btn"><i class="fa fa-angle-left left" title="Back to List" aria-hidden="true"></i>Back</a>
         </div>
     </div>
     <div class="approvals-data">
@@ -187,7 +177,7 @@
                     <div class="card-footer padding-15-0 m-bottom5 top-divider" *ngIf="action == 0 && selectedStatus != 6 && selectedStatus != 7">
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 right-align">
-                                <a class="waves-effect waves-light btn custom-btn cancel" title="Cancel" href="/#/my/helpdesk/ticketlist/{{issueListSelectedStatus}}">Cancel</a>
+                                <a class="waves-effect waves-light btn custom-btn cancel" title="Cancel" (click)="backClicked()">Cancel</a>
                                 <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='addUpdateTickets()'>Submit</a>
                             </div>
                         </div>
